...
        }
    };

    return (
        <>
            <View
                testID='dashboard-header-tabs-container'
                style={styles.tabsContainerStyle}>
                <View style={styles.tabItemContainer}>
                    <Button
                        testID='dashboard-header-tabs-lost-button'
                        buttonStyle={[
                            styles.tabButtonStyle,
...
